--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="http://code.highcharts.com/highcharts-more.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
-
+<h1>KQI Mobile Voice &amp; SMS</h1>
 <button id="addnew">Add new Metrics</button>
 <div id="items">
 <div id="2g" class="gauge"></div>
